@startuml

title __MODEL's Class Diagram__\n

  namespace model {
    class model.KlientModel {
        {static} + nazvyStlpcov : String[]
        - zoznamKlientov : List<Klient>
        + KlientModel()
        + getColumnClass()
        + getColumnCount()
        + getColumnName()
        + getRowCount()
        + getValueAt()
    }
  }
  

  namespace model {
    class model.UcetModel {
        {static} + nazvyStlpcov : String[]
        - zoznamUctov : List<Ucet>
        + UcetModel()
        + getColumnClass()
        + getColumnCount()
        + getColumnName()
        + getRowCount()
        + getValueAt()
    }
  }
  

  model.KlientModel -up-|> javax.swing.table.AbstractTableModel
  model.UcetModel -up-|> javax.swing.table.AbstractTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
